--- a/01/global.css
+++ b/01/global.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 20px 5% 0 5%;
+  margin: 20px;
   text-align: center;
 }
 
@@ -21,5 +21,5 @@ h1 {
 p {
   padding: 20px;
   background: #DDDDDD;
-  font-weight: 400;
+  font-weight: 350;
 }
