--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,29 @@
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+* {
+    box-sizing: border-box;
+}
+
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 20px;
+  text-align: center;
+}
+
+h1 {
+  padding: 20px;
+  background: #0E77FF;
+  color: white;
+  font-weight: 700;
+  text-transform: uppercase
+}
+
+p {
+  color: #333;
+  padding: 20px;
+  background: #fff;
+  font-weight: 350;
+  border-style: solid;
+  border-width:5px;
+  border-color: #0E77FF;
+}
