--- a/01/global.css
+++ b/01/global.css
@@ -1,1 +1,31 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+h1{
+    margin: 18px;
+    border: 10px;
+    font-size: 300px;
+    font: inherit;
+    vertical-align: baseline;
+    text-align: -webkit-center;
+    padding-top: 22px;
+    background-color: #3697C6;
+    color: #ffffff;
+    font-weight: bold;
+    padding-top: 40 px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+}
+p{
+  margin: 1px;
+    
+    padding: 40px 20px 20px 20px;
+    border: 10px;
+    font-size: 500px;
+    font: inherit;
+    vertical-align: baseline;
+    text-align: -webkit-center;
+    padding-top: 22px;
+    background-color: ##CDCECD;
+    color: #000000;
+    font-weight: bold;
+}
