--- a/01/global.css
+++ b/01/global.css
@@ -1,3 +1,21 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 
-h1{}
+h1{
+  margin: 20px 20px 0px 20px;
+  padding: 20px;
+  border: 0px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #0080FF;
+  font-family: sans-serif;
+}
+
+p {
+  margin: 0px 20px 20px 20px;
+  padding: 20px; 
+  border: 0px;
+  text-align: center;
+  background-color: #B3B3B3;
+  font-family: sans-serif;
+}
