--- a/01/global.css
+++ b/01/global.css
@@ -1,6 +1,8 @@
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
-h1{
+h1 {
   margin: 20px 20px 0px 20px;
   padding: 20px;
   border: 0px;
@@ -8,7 +10,6 @@ h1{
   text-transform: uppercase;
   color: #fff;
   background-color: #0080FF;
-  font-family: sans-serif;
 }
 
 p {
@@ -17,5 +18,4 @@ p {
   border: 0px;
   text-align: center;
   background-color: #B3B3B3;
-  font-family: sans-serif;
 }
