--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,20 @@
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  margin: 20px 20px 0 20px;
+  padding: 20px 0 20px 0;
+  border: 0;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #0080FF;
+}
+
+p {
+  margin: 0 20px 20px 20px;
+  padding: 20px 0 20px 0;
+  border: 5px solid #0080FF;
+  text-align: center;
+}
