--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,34 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+
+  color: white;
+  font-size: 15px;
+  background-color: blue;
+  text-align: center;
+  padding: 20px;
+  border: 0px;
+  margin-top: 20px;
+  margin-bottom: 0px;
+  margin-left: 20px;
+  margin-right: 5px;
+  text-transform: uppercase;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+p {
+
+  color: black;
+  font-size: 18px;
+  background-color: white;
+  text-align: center;
+  padding: 24px;
+  border: 2px;
+  border-color: blue;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 5px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
