--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,23 @@
-/*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+body {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;  
+}
+
+h1 {
+  margin: 0;
+  padding: 20px;
+  border: 0;
+  text-decoration: underline;
+  text-align: center;
+  font-size: 41px;
+  color: #fff;
+  background-color: #0080FF;
+}
+
+p {
+  margin: 0;
+  padding: 20px;
+  border-top: 1px solid #B3B3B3;
+  text-align: center;
+  color: #fff;
+  background-color: #000080;
+}
