--- a/01/global.css
+++ b/01/global.css
@@ -1,1 +1,22 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  font-family: "Helvetica Neue";
+  margin: 20px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 16px;
+  text-transform: uppercase;
+  padding: 20px;
+  letter-spacing: 0px;
+  color: white;
+  background-color: #0076FF;
+  font-weight: 600;
+}
+
+p {
+  background-color: #DDDDDD;
+  padding: 20px;
+}
