--- a/01/global.css
+++ b/01/global.css
@@ -8,10 +8,17 @@ h1 {
   background-color: #79B6FB;
   width: 350px;
   height: 15px;
-  margin: 20px;
+  margin: 20px 20px 0px 20px;
   padding: 20px;
 }
 
 p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
   text-align: center;
+  background-color: #EAEAEA;
+  height: 15px;
+  width: 350px;
+  margin: 0px 20px 20px 20px;
+  padding: 20px;
 }
