--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,31 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {}
+
+h1 {
+  margin-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #FF8000;
+  text-align: center;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 30px;
+  color: #FF8000;
+
+}
+
+h2 {}
+
+p {}
+
+ul {}
+
+ul > li {}
+
+ol {}
+
+ol > li {}
+
+.bold {
+  font-weight: bold;
+}
