--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,28 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+
+/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  text-align: center;
+}
+
+h1 {
+  font-size: 40px;
+  padding: 20px;
+  letter-spacing: 0px;
+  color: white;
+  background-color: #0076FF;
+  font-weight: 600;
+  text-decoration: underline;
+  border-bottom-style: solid;
+  border-bottom-color: white;
+  border-bottom-width: 2px;
+
+}
+
+p {
+  background-color: #00489C;
+  padding: 20px;
+  color: white;
+}
