--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,26 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  background-color: #2086F8;
+  width: 350px;
+  height: 15px;
+  margin: 20px 20px 0px 20px;
+  padding: 20px;
+}
+
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+  text-align: center;
+  background-color: white;
+  height: 16px;
+  width: 340px;
+  margin: 0px 20px 20px 20px;
+  padding: 20px;
+  border: solid 5px;
+  border-color: #2086F8;  
+}
