--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,33 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+
+
+h1 {
+
+  color: white;
+  font-size: 40px;
+  background-color: #0E77FF;
+  text-align: center;
+  text-decoration: underline;
+  padding: 20px;
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 1px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+}
+
+p {
+
+  color: white;
+  font-size: 16px;
+  background-color: #05489C;
+  text-align: center;
+  padding: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+
+}
