--- a/01/global.css
+++ b/01/global.css
@@ -1,1 +1,5 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+h1 {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /*margins and stuff*/
+}
