--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,49 @@
-/*font-family: Georgia, Times, "Times New Roman", serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+h1{
+  font-family: Georgia, Times, "Times New Roman", serif;
+  color: #BA721D;
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  border-style: solid;
+  border-width: 2px;
+  padding-bottom: 20px;
+  border-top: hidden;
+  border-left: hidden;
+  border-right: hidden;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+p{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  text-align: center;
+  padding: 20px 20px 20px 20px;
+  background-color: #DCDCDC;
+  font-weight: bold; 
+  margin: 20px 20px 10px 20px;
+  font-size: 15px;
+}
+h2{
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+font-weight: bold;
+font-size: 20px;
+padding-top: 10px;
+padding-bottom: 5px;
+margin-top: 10px; 
+margin-left: 22px;
+text-decoration: underline;
+}
+ul li{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  list-style-type: disc;
+  padding: 14px 12px 0px 0px;
+  margin-left: 40px;
+  line-height: 5px;
+}
+ol li{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
+  list-style-type: decimal;
+  padding: 0px 10px 0px 10px;
+  margin-left: 40px;
+  margin-top: 5px;
+  
+}
