--- a/04/global.css
+++ b/04/global.css
@@ -1,7 +1,9 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 
-body {}
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 
 h1 {
   margin-top: 20px;
@@ -14,15 +16,27 @@ h1 {
 
 }
 
-h2 {}
+h2 {
+  margin-left: 20px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 20px;
+  text-decoration: underline;
+}
 
-p {}
+p {
+  margin: 20px;
+  padding: 20px;
+  background-color: #B3B3B3;
+}
 
-ul {}
+ul {
+}
 
 ul > li {}
 
-ol {}
+ol {
+
+}
 
 ol > li {}
 
