--- a/04/global.css
+++ b/04/global.css
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-  margin-top: 20px;
+  margin: 20px 0 0 15px;
   padding-bottom: 20px;
   border-bottom: 1px solid #FF8000;
   text-align: center;
@@ -30,15 +30,22 @@ p {
 }
 
 ul {
+  margin: 10px 0 20px 40px;
+  list-style: disc;
 }
 
-ul > li {}
+ul > li {
+  margin-bottom: 4px;
+}
 
 ol {
-
+  margin: 10px 0 20px 40px;
+  list-style: decimal;
 }
 
-ol > li {}
+ol > li {
+  margin-bottom: 4px;
+}
 
 .bold {
   font-weight: bold;
