--- a/01/global.css
+++ b/01/global.css
@@ -1,31 +1,34 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 h1{
-    margin: 18px;
-    border: 10px;
-    font-size: 300px;
-    font: inherit;
+    margin-top: 20px; 
+    margin-right: 20px;
+    margin-bottom: 0px;
+    margin-left: 20px;
+    font-size: 17px;
     vertical-align: baseline;
     text-align: -webkit-center;
-    padding-top: 22px;
-    background-color: #3697C6;
-    color: #ffffff;
-    font-weight: bold;
-    padding-top: 40 px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
+    background-color: #2D68D0;
+    color: #D02D04;
+    padding-top: 20px;
+    padding-left: 11px;
+    padding-right: 9px;
+    padding-bottom: 19px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
 }
 p{
-  margin: 1px;
-    
-    padding: 40px 20px 20px 20px;
-    border: 10px;
-    font-size: 500px;
-    font: inherit;
-    vertical-align: baseline;
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-bottom: 19px;
+    padding-left: 10px;
+    font-size: 16px;
     text-align: -webkit-center;
-    padding-top: 22px;
-    background-color: ##CDCECD;
-    color: #000000;
-    font-weight: bold;
+    vertical-align: baseline;
+    background-color: #CDCECD;
+    color: #D02D04;
+    margin-top: 0px; 
+    margin-right: 20px;
+    margin-bottom: 24px;
+    margin-left: 20px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
