--- a/01/global.css
+++ b/01/global.css
@@ -1,1 +1,4 @@
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
