--- a/05/global.css
+++ b/05/global.css
@@ -1,2 +1,54 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  background-color: #333333;
+  color: #fff;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+#intro {
+  margin:10px 0 20px 0;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #fff;
+}
+
+h1 {
+  padding: 20px 0 20px 20px;
+  background-color: #800080;
+  border-bottom: 1px solid #FF00FF;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  text-align: center;
+  font-size: 30px;
+}
+
+h2 {
+  padding: 20px 0 0 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+h3 {
+  padding-left: 20px;
+  font-size: 22px;
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+}
+
+p {
+  padding-left: 20px;
+}
+
+a {
+  padding: 1px;
+  color: #fff;
+  background-color: #000;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+
+.bold {
+  font-weight: bold;
+}
