--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,24 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+h1 {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif; text-decoration: underline; font-weight: bold;
+  font-size: 40px;
+  color: white;
+  text-align: center;
+  margin-right: 28px;
+  padding: 20px;
+  background-color: #1069FA;
+
+}
+
+p {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif; font-weight: bold;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  background-color: #0A3B87;
+  margin-right: 28px;
+  letter-spacing: -.25px;
+  border: solid white;
+  border-width: 1px 0px;
+}
