--- a/01/global.css
+++ b/01/global.css
@@ -1,1 +1,19 @@
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+h1 {
+  color: #FFFFFF;
+  background-color: #3FB7EF;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding: 20px 20px 20px 20px;
+  margin: 20px 20px 0px 20px;
+}
+
+p {
+  color: #6A6A6A;
+  background-color: #D8D8D8;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
+  margin: 0px 20px 20px 20px;
+}
