--- a/01/global.css
+++ b/01/global.css
@@ -1,1 +1,25 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: #3B99FB;
+  padding: 20px;
+  margin: 20px 20px 0px 20px; 
+  width: 351px;
+}
+
+p {
+  color: black;
+  text-align: center;
+  background-color: #E3E5E9;
+  padding: 20px;
+  margin: 0px 20px 20px 20px;
+  width: 351px;
+}
