--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,23 @@
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+h1 {
+  color: #FFFFFF;
+  background-color: #0787EF;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding: 20px 20px 20px 20px;
+  margin: 20px 20px 0px 20px;
+}
+
+p {
+  color: #6A6A6A;
+  background-color: #FFFFFF;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
+  border-style: solid;
+  border-width: 5px;
+  border-color: #0787EF;
+  margin: 0px 20px 20px 20px;
+}
