--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,26 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body{
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 20px;
+  text-align: center;
+}
+
+h1 {
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: #3B99FB;
+  padding: 20px;
+  width: 351px;
+}
+
+p {
+  color: black;
+  background-color: white;
+  padding: 20px 20px 20px 20px;
+  width: 341px;
+  border-style: solid;
+  border-color: #3B99FB;
+  border-width: 5px;
+}
