--- a/01/global.css
+++ b/01/global.css
@@ -7,14 +7,19 @@ body {
 h1 {
   font-size: 16px;
   font-weight: bold;
+  color: white;
   text-transform: uppercase;
-  margin-top: 22px;
-  margin-bottom: 22px;
-  padding:18px;
-  background-color: blue;
+  padding-top: 20px;
+  padding-right: 18px;
+  padding-bottom: 20px;
+  padding-left: 18px;
+  background-color: #70A8FF;
 }
 
 p {
-  margin-top:20px;
-  margin-bottom:20px;
-}
+  background-color: #E9E9CE;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+ }
