--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,19 @@
-/*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+h1 {
+  color: #FFFFFF;
+  background-color: #0787EF;
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  text-decoration: underline;
+  padding: 20px 20px 20px 20px;
+}
+
+p {
+  color: #FFFFFF;
+  background-color: #1E4D8F;
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  text-align: center;
+  padding: 20px 20px 20px 20px;
+  border-top: 1px solid #9D9D9D;
+}
