--- a/01/global.css
+++ b/01/global.css
@@ -1,9 +1,10 @@
 h1 {
   color: #FFFFFF;
-  background-color: #3FB7EF;
+  background-color: #0787EF;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
+  font-weight: bold;
   text-transform: uppercase;
   padding: 20px 20px 20px 20px;
   margin: 20px 20px 0px 20px;
