--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,24 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+
+body{
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  text-align: center;
+}
+
+h1 {
+  color: white;
+  font-weight: bold;
+  font-size: 40px;
+  background-color: #3B99FB;
+  padding: 20px 6px 20px 20px;
+  text-decoration: underline;
+  border-bottom-style: solid;
+  border-bottom-color: white;
+  border-bottom-width: 2px;
+}
+
+p {
+  color: white;
+  background-color: #053C96;
+  padding: 20px 6px 20px 20px;
+}
