Second one seems to be working.

--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,27 @@
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 20px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  text-transform: uppercase;
+  padding-top: 20px;
+  padding-right: 18px;
+  padding-bottom: 20px;
+  padding-left: 18px;
+  background-color: #116FFF;
+}
+
+p {
+  border: 5px;
+  border-style: solid;
+  border-color: #116FFF;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+ }
