--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,118 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+
+h1 {
+
+  color: orange;
+  font-size: 30px;
+  font-weight: bold;
+  text-transform: bold;
+  background-color: white;
+  text-align: center;
+  padding: 20px;
+  border: 1px;
+  border-color: orange;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+  margin-left: 10px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+}
+
+h2 {
+
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: white;
+  text-align: left;
+  text-decoration: underline;
+  padding: 5px;
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 1px;
+  margin-left: 15px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+}
+
+p {
+
+  color: black;
+  text-transform: bold;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: gray;
+  text-align: left;
+  padding-left: 20px;
+  padding-right:15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 18px;
+  margin-left: 20px;
+  margin-right: 5px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+ul {
+
+  color: black;
+  font-size: 12px;
+ 
+  background-color: white;
+  text-align: left;
+  text-decoration: none;
+  list-style-type: disc;
+  padding: 2px;
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+li {
+
+  color: black;
+  font-size: 16px;
+
+  background-color: white;
+  text-align: left;
+  text-decoration: none;
+  padding: 1px;
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 1px;
+  margin-left: 17px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+ol {
+
+  color: white;
+  font-size: 20px;
+  background-color: none;
+  text-align: center;
+  text-decoration: none;
+  list-style-type: decimal;
+  padding: 7px;
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 3px;
+  margin-left: 15px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
