--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,26 @@
-/*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+body {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  text-align: center;
+}
+
+h1  {
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  text-decoration: underline; 
+  padding-top:  20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  background-color: #3785FF;
+}
+
+p {
+  border-top:1px;
+  border-style: solid;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: white;
+  background-color: #195FAB;
+}
+
