--- a/01/global.css
+++ b/01/global.css
@@ -7,8 +7,8 @@ h1{
     font-size: 17px;
     vertical-align: baseline;
     text-align: -webkit-center;
-    background-color: #2D68D0;
-    color: #D02D04;
+    background-color: #1948D0;
+    color: #ffffff;
     padding-top: 20px;
     padding-left: 11px;
     padding-right: 9px;
@@ -24,8 +24,8 @@ p{
     font-size: 16px;
     text-align: -webkit-center;
     vertical-align: baseline;
-    background-color: #CDCECD;
-    color: #D02D04;
+    background-color: #BEB6D0;
+    color: #000000;
     margin-top: 0px; 
     margin-right: 20px;
     margin-bottom: 24px;
