--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,36 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+h1{
+    margin-top: 20px; 
+    margin-right: 20px;
+    margin-bottom: 0px;
+    margin-left: 20px;
+    font-size: 17px;
+    vertical-align: baseline;
+    text-align: -webkit-center;
+    background-color: #2D68D0;
+    color: #ffffff;
+    padding-top: 20px;
+    padding-left: 11px;
+    padding-right: 9px;
+    padding-bottom: 19px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+}
+p{
+        padding-top: 20px;
+    padding-right: 10px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    font-size: 16px;
+    text-align: -webkit-center;
+    vertical-align: baseline;
+    background-color: #CFD0CF;
+    color: #000000;
+    margin-right: 20px;
+    margin-bottom: 24px;
+    margin-left: 20px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    border: #2D68D0;
+    border-style: solid;
+    border-width: thick;
+}
