--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,25 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  margin: 20px;
+  width: 380px;
+  height: 110px;
+  text-align: center;
+  font-size: 16px;
+  border: 5px solid #0076FF;
+}
+
+
+h1 {
+  background: #0076FF;
+  color: #ffffff;
+  font-weight: bolder;
+  text-transform: uppercase;
+  padding: 18px 20px 20px 20px;
+}
+
+
+p {
+  padding: 23px;
+}
