--- a/03/global.css
+++ b/03/global.css
@@ -1,1 +1,16 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
+
+body {
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif
+}
+
+
+h1 {
+  background: #0076FF;
+
+}
+
+
+p {
+
+}
