--- a/03/global.css
+++ b/03/global.css
@@ -1,16 +1,26 @@
 /*font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;*/
 
 body {
-  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif
+  width: 430px;
+  height: 130px;
+  text-align: center;
+  font-size: 15.5px;
+  font-family: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif;
+  color: #FFFFFF;
+  font-weight: bolder;
 }
 
 
 h1 {
+  padding: 20px;
   background: #0076FF;
-
+  border-bottom: 1px solid #FFFFFF;
+  font-size: 40px;
+  text-decoration: underline;
 }
 
 
 p {
-
+ padding: 21px;
+ background: #00489C;
 }
