--- a/06/global.css
+++ b/06/global.css
@@ -37,7 +37,13 @@ h3 {
 
 p {
   margin-left: 20px;
-  padding: 0;
+  padding-top: 5px;
+}
+
+.festival {
+  margin-left: 20px;
+  font-size: 75%;
+  margin-bottom: 20px;
 }
 
 .festival a {
@@ -45,10 +51,7 @@ p {
   text-decoration: none;
   color: white;
   text-transform: uppercase;
-}
-
-.festival {
-  margin-left: 20px;
+  font-size: 150%;
 }
 
 .month {
