--- a/07/global.css
+++ b/07/global.css
@@ -1,2 +1,72 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+}
+
+h1{
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+  background: #83247D;
+  padding: 20px ;
+  font-size: 189%;
+  text-align: center;
+  border-bottom: 1px solid #C535BD;
+}
+
+#intro {
+  background: #333333;
+  border-bottom: 1px solid white;
+  padding-bottom: 20px
+  margin-left: 20px;
+}
+
+#intro h2 {
+  text-align: center;
+  font-size: 125%;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+#intro p {
+  margin-left: 20px;
+  padding-bottom: 20px;
+}
+
+.month {
+  background: #333333;
+  border-bottom: 1px solid white;
+  padding-top: 20px;
+  padding-bottom: 20px
+  font-size: 110%;
+}
+
+.month h3 {
+  margin-left: 20px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
+  font-size: 125%;
+  font-weight: 700;
+  text-decoration: underline;
+  text-transform: uppercase;
+  padding-bottom: 10px;
+}
+
+.festival {
+  font-weight:300;
+  background: #333333;
+  margin-left: 20px;
+  padding-bottom: 20px;
+  font-size: 90%;
+  padding-top: 10px;
+}
+
+.festival a {
+  background: black;
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+  font-size: 120%;
+  padding: 3px;
+}
