--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,17 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+h1 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-size: 34px;
+  font-weight: 600;
+  color: orange;
+  text-align: center;
+  margin-right: 27px;
+  margin-top: -3px;
+  padding: 20px;
+  background-color: white;
+  letter-spacing: -2.25px;
+  border-bottom: solid orange;
+  border-width: 1px 0px;
+}
