--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,27 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  text-align: center;
+}
+
+h1 {
+  font-size: 40px;
+  padding: 20px;
+  letter-spacing: 0px;
+  color: white;
+  background-color: #0076FF;
+  font-weight: 600;
+  text-decoration: underline;
+  border-bottom-style: solid;
+  border-bottom-color: white;
+  border-bottom-width: 2px;
+
+}
+
+p {
+  background-color: #00489C;
+  padding: 20px;
+  color: white;
+}
