--- a/09/global.css
+++ b/09/global.css
@@ -1,19 +1,14 @@
 /* Actual font is unknown. Use this--it's close enough: */
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 body {
-  padding-top: 10px;
+  padding-top: 14px;
+  padding-left: 10px;
 }
 
 a {
-  margin-top: 10px;
-  margin-right: 10px;
-  margin-bottom: 0px;
-  margin-left: 0px;
+  margin: 10px 5px 0px 0px;
   border-radius: 5px;
-  padding-top:5px;
-  padding-right: 5px;
-  padding-bottom: 5px;
-  padding-left: 5px;
+  padding: 8px 10px 10px 10px;
   background-color: #66CCFF;
   color: #fff;
   font-size: 10px;
