--- a/04/global.css
+++ b/04/global.css
@@ -15,3 +15,16 @@ h1 {
   border-bottom: solid orange;
   border-width: 1px 0px;
 }
+
+p {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: black;
+  padding: 20px;
+  background-color: gray;
+  font-weight: bold;
+  font-size: 17px;
+  letter-spacing: -0.25px;
+  text-align: left;
+  border: solid white;
+  border-width: 19px 48px 19px 19px;
+}
