--- a/05/global.css
+++ b/05/global.css
@@ -1,9 +1,6 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 
-/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
-
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
@@ -14,7 +11,7 @@ h1 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
   background: #83247D;
   padding: 20px;
-  font-size: 30px%;
+  font-size: 30px;
   text-align: center;
   border-bottom: 1px solid #C535BD;
   }
@@ -22,28 +19,33 @@ h1 {
 
 h2 {
   text-align: center;
-  font-size: 125%;
-  margin: 20px 0 5px 0;
-  padding: 0;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  background: #333333;
 }
 
 h3 {
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans-serif;
-  margin: 20px;
-  margin-bottom: 10px;
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-bottom: 10px;
+  padding-left: 20px;
   font-size: 125%;
   font-weight: 700;
   text-decoration: underline;
   text-transform: uppercase;
+  background: #333333;
 }
 #intro {
   border-bottom: 1px solid white;
-  padding-bottom: 20px
+  padding-bottom: 20px;
+  background: #333333;
 }
 
 p {
-  margin-left: 20px;
-  padding: 0;
+  padding-left: 20px;
+  background: #333333;
 }
 
 a {
