--- a/10/global.css
+++ b/10/global.css
@@ -1,1 +1,23 @@
 /* Actual font is unknown. Use any from past assignments. */
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.box {
+  width: 100px;
+  margin: 10px 0px 0px 10px;
+  padding: 0px 24px 0px 0px;
+  border-right: 1px solid Gray;
+  float: left 
+}
+
+.box h4 {
+  font-size: 15px;
+  font-weight: bold;
+}
+
+.blurb {
+  font-size: 11px;
+}
+
