--- a/01/global.css
+++ b/01/global.css
@@ -24,7 +24,7 @@ p {
   text-align: center;
   padding: 20px;
   border: 0px;
-  margin-top: 0px;
+  margin-top: 0px;#262626
   margin-bottom: 10px;
   margin-left: 15px;
   margin-right: 15px;
