--- a/05/global.css
+++ b/05/global.css
@@ -1,2 +1,101 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+
+
+
+h1 {
+
+  color: white;
+  font-size: 30px;
+  background-color: purple;
+  text-align: center;
+  padding: 20px;
+  border: 1px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+}
+
+h2 {
+
+  color: white;
+  font-size: 18px;
+  font-weight: none;
+  background-color: #332F2F;
+  text-align: center;
+  text-decoration: ;
+  padding-top: 10px;
+
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 1px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+p {
+
+  color: black;
+  text-transform: bold;
+  font-size: 16px;
+  font-weight: bold;
+  background-color: #332F2F;
+  text-align: left;
+  padding-left: 20px;
+  padding-right:15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+h3 {
+
+  color: white;
+  font-size: 18px;
+ 
+  background-color: #332F2F;
+  text-align: left;
+  text-decoration: underline;
+  text-transform: uppercase;
+  padding: 2px;
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 1px;
+  margin-left: 20px;
+  margin-right: 0px;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+a {
+
+  color: white;
+  font-size: 16px;
+
+  background-color: black;
+  text-align: left;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 0px;
+  border: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
