--- a/01/global.css
+++ b/01/global.css
@@ -8,13 +8,12 @@ Type CSS Selector here
 */
 body{
   margin: 20px;
-  font-family: "Helvetica Neue";
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
 }
 
 h1{
   padding: 20px;
-  font-family: "Helvetica";
   text-transform: uppercase;
   font-weight: 900;
   color: white;
@@ -23,6 +22,5 @@ h1{
 
 h1, p{
   padding: 20px;
-  font-family: "Arial"
   background-color: #D5D5D5;
 }
