--- a/02/global.css
+++ b/02/global.css
@@ -1,1 +1,21 @@
 /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin: 20px;
+  border: 5px solid #0058FF;
+  text-align: center;
+}
+
+h1 {
+  padding: 15px 20px 25px 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  background: #0058FF;
+  color: white;
+}
+
+p{
+  padding: 20px 20px 20px 20px;
+  background-color: #DDDDDD;
+}
