--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,2 @@
-/*font-family: Georgia, Times, "Times New Roman", serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+font-family: Georgia, Times, "Times New Roman", serif;
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
