--- a/09/global.css
+++ b/09/global.css
@@ -1,2 +1,22 @@
-/* Actual font is unknown. Use this--it's close enough: */
-/*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  margin-top: 15px;
+}
+
+.button {
+  background: #6488A5;
+  margin-left: 10px;
+  border-radius: 5px;
+  border: 1px solid #6488A5;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 7px ;
+    padding-bottom: 7px;
+    font-size: .7em;
+}
