--- a/10/global.css
+++ b/10/global.css
@@ -1,1 +1,17 @@
-/* Actual font is unknown. Use any from past assignments. */
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.box {
+  float: left;
+
+}
+
+.box h4 {
+  font-weight: 500;
+}
+
+.blurb {
+  font-size: 75%;
+  clear: both;
+}
