--- a/04/global.css
+++ b/04/global.css
@@ -1,2 +1,67 @@
 /*font-family: Georgia, Times, "Times New Roman", serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
+body {
+  width:430px;
+  height: 800px;
+
+}
+
+h1, h2 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: bolder;
+}
+
+p, ul, ol {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+}
+
+h1 {
+  color: #D46E00;
+  font-size: 30px;
+  border-bottom: 2px solid #D46E00;
+  text-align: center;
+  padding: 20px;
+}
+
+
+p {
+  background: #EEEEEE;
+  font-weight: bold;
+  text-align: justify;
+  margin: 21px;
+  padding: 18px 35px 19px 20px;
+  font-size: 16px;
+
+}
+
+
+h2 {
+  text-decoration: underline;
+  font-size: 20px;
+  padding-left: 20px;
+
+}
+
+ul {
+  list-style-type: disc;
+  padding: 10px 0px 19px 38px;
+  line-height: 120%;
+
+}
+
+ol {
+  list-style-type: lower-alpha;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+ol li {
+  line-height: 87.5%;
+  display: list-item;
+  list-style-type: decimal;
+  padding: 8px 22px 1px 38px;
+
+}
