gonna pull again from master

--- a/05/global.css
+++ b/05/global.css
@@ -1,17 +1,23 @@
 /*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
 font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+
 /*h1 is the purple header*/
+body {
+  /*color: white;*/
+  /*^put this back in when it's easier to see lolz^*/
+}
 h1{
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-  
+
 }
-/*h2 is the "festical diary"*/
+/*h2 is the "festival diary"*/
 h2 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 /*h3 are the months*/
 h3{
   font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+
 }
 /*p are the festival links AND the city/dates AND the "here are some..."*/
 p {
