--- a/05/global.css
+++ b/05/global.css
@@ -46,11 +46,12 @@ h3{
 
 #j{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   background-color: #333333;
-  padding: 5px 9px 20px 21px;
+  padding: 27px 0px 0px 20px;
   text-align: left;
   color: white;
+
 }
 
 #m{
@@ -78,6 +79,13 @@ p {
   padding: 5px 9px 20px 21px;
   text-align: left;
   color: white;
-
 }
 
+a:link, a:hover {
+    background-color: #000000;
+    color: white;
+    padding: 4px 5px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+}
